# netspeed

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: api.rs  main.rs  speed_test.rs
