[package]
name = "netspeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
codegen-units = 1
strip = "symbols"
panic = "abort"
lto = true

[dependencies]
anyhow = "1.0.79"
futures = "0.3.30"
indicatif = "0.17.7"
rayon = "1.8.1"
reqwest = { version = "0.11", default-features = false, features = [
  "blocking",
  "native-tls",
] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
